Reorganizado games, adicionado espaço para console virtual, adicionado informações sobre outros jogos

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -233,7 +233,8 @@ header{
     margin-right: 50px;
 }
 .spin-offs span, 
-.main-series span{
+.main-series span,
+.virtual-console span{
     font-weight: bold;
 }
 
