--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,7 +2,7 @@
     COMMON AREA
    -------------- */
 *{
-    box-sizing: border-box;
+
     margin: 0;
     padding: 0;
 }
@@ -11,6 +11,7 @@ body{
 }
 header{
     background-color: red;
+
 }
 .header{
     margin: auto;
@@ -20,6 +21,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 .logo-area{
     width: 80px;
@@ -46,6 +48,7 @@ header{
     display: flex;
     align-items: center;
     border-bottom: 5px solid red;
+    box-sizing: border-box;
 }
 .menu li a:hover{
     border-bottom: 5px solid black;
@@ -53,30 +56,57 @@ header{
 .menu .active a{
     border-bottom: 5.5px solid black;
 }
+footer div{
+    width: 100%;
+    height: 100px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    padding-top: 20px;
+    box-sizing: border-box;
+}
+
 /* --------------
      INDEX AREA
    -------------- */
 .main-area{
-    padding-top: 80px;
-    max-width: 1180px;
+    height: 550px;
     margin: auto;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.text-area{
+.main-area .text-area{
     width: 700px;
     margin-right: 100px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+    line-height: 1.5;
 }
 .text-area h1{
     margin: auto;
     text-align: center;
+    font-size: 35px;
     margin-bottom: 30px;
+    text-shadow: 1px 1px 2px #494949;
+}
+.front-desc {
+    font-size: 25px;
+    text-align: center;
+    text-shadow: 1px 1px 1px #9e9a9a;
 }
 .picture{
-    width: 300px;
+    width: 400px;
     height: 300px;
+    margin-bottom: 80px;
 }
 .picture img{
-    width: 100%;
+    height: 400px;
+}
+.twitter{
+    margin-right: 30px;
 }
 /* -------------------
      HIGHLIGHTS AREA
@@ -140,6 +170,7 @@ header{
     height: 100%;
     padding: 5px;
     cursor: pointer;
+    box-sizing: border-box;
 }
 .game-selection-area div:hover{
     background-color: #DADADA;
@@ -167,7 +198,6 @@ header{
     flex-direction: row;
     flex-wrap: wrap;
 }
-
 .game-info-area{
     display: flex;
     justify-content: space-around;
@@ -178,14 +208,15 @@ header{
     background-color: #DADADA;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     box-shadow: 1px 2px 5px #494949;
 }
-.text-area{
+.text--area{
     display: flex;
     flex-direction: column;
     padding-left: 50px;
     line-height: 1.5;
+    margin-right: 100px;
 }
 .game-title{
     font-weight: bold;
@@ -210,7 +241,7 @@ header{
     align-items: center;
     margin-top: 30px;
 }
-.text-area a{
+.text--area a{
     text-decoration: none;
     padding: 10px;
     border-radius: 5px;
@@ -237,7 +268,7 @@ header{
     background-color: #DADADA;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     box-shadow: 1px 2px 5px #494949;
 }
 .wait-text{
@@ -254,4 +285,8 @@ header{
 }
 .hide{
     display: none;
+}
+
+colgroup{
+    color: #F8F8F8;
 }
