Adicionado botões de toggle em franquias destaque, melhorado estética e visualização

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -65,6 +65,7 @@ footer div{
     font-weight: bold;
     padding-top: 20px;
     box-sizing: border-box;
+    text-shadow: 1px 1px 1px #494949;
 }
 
 /* --------------
@@ -188,6 +189,13 @@ footer div{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.spin-offs,
+.virtual-console{
+    min-height: 50px;
+}
+
+
+
 .spin-offs span, 
 .main-series span,
 .virtual-console span{
@@ -289,4 +297,44 @@ footer div{
 
 colgroup{
     color: #F8F8F8;
+}
+
+
+.main-series-title,
+.spin-offs-title,
+.virtual-console-title{
+    font-size: 23px;
+}
+
+
+.spin-offs-title span,
+.virtual-console span{
+    display: flex;
+    align-items: center;
+}
+.spin-plus,
+.spin-minus,
+.vc-plus,
+.vc-minus{
+    width: 20px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+.spin-plus{
+    display: block;
+}
+.spin-minus{
+    display: none;
+}
+.vc-plus{
+    display: block;
+}
+.vc-minus{
+    display: none;
+}
+.spin-offs .games1{
+    display: none;
+}
+.virtual-console .games1{
+    display: none;
 }
